<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="scan_light_open">轻触照亮</string>
    <string name="scan_light_close">轻触关闭</string>
    <string name="scan_light_normal">扫二维码</string>


    <string name="appoint_staff">指定宣传员</string>

    <string name="succ_edit">修改成功</string>
    <string name="succ_delete">删除成功</string>
    <string name="succ_update">上传成功</string>
    <string name="succ_option">操作成功</string>
    <string name="succ_add">添加成功</string>
    <string name="succ_review">审核成功</string>
    <string name="succ_clear">清除成功</string>


    <string name="please_input">请输入</string>
    <string name="please_select">请选择</string>

    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="input">输入</string>
    <string name="finish">完成</string>
    <string name="delete">删除</string>
    <string name="reset">重置</string>
    <string name="refuse">拒绝</string>
    <string name="pass">通过</string>
    <string name="edit">编辑</string>
    <string name="more">更多</string>
    <string name="search">搜索</string>
    <string name="calculation">计算</string>
    <string name="select_all">全选</string>
    <string name="submit_for_review">提交审核</string>
    <string name="submit">提交</string>
    <string name="save_draft">保存草稿</string>
    <string name="save">保存</string>
    <string name="open">展开</string>
    <string name="add_line">添加线路</string>

    <string name="day">天</string>
    <string name="vehicles">辆</string>
    <string name="price">元</string>
    <string name="person">人</string>
</resources>