<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f5f5f5"
        android:orientation="vertical">

        <com.shenyuan.superapp.base.widget.TitleView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:ps_title="删除学校信息" />

        <LinearLayout
            android:id="@+id/ll_school_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_ffffff"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/title">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:cardBackgroundColor="@color/color_f5f5f5"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@null"
                    android:drawableLeft="@mipmap/ic_school_search"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/color_999999"
                    android:imeOptions="actionSearch"
                    android:hint="@string/search"
                    android:padding="8dp"
                    android:textColor="#999999"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <com.shenyuan.superapp.base.widget.MyRefreshLayout
            android:id="@+id/mrl_schools"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/cl_tools"
            app:layout_constraintTop_toBottomOf="@id/ll_school_search"
            app:layout_goneMarginBottom="0dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_schools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never" />

        </com.shenyuan.superapp.base.widget.MyRefreshLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_ffffff"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <CheckBox
                android:id="@+id/cb_distribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:button="@drawable/selector_check_school_large"
                android:padding="10dp"
                android:text="@string/select_all"
                android:textColor="@color/color_333333"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.shenyuan.superapp.base.widget.PSTextView
                android:id="@+id/tv_delete"
                style="@style/btn_single_blue"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/delete"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>